site html skeleton

--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./assets/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulting Website</title>
+    <link rel= "stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <section id="hero-page">
+        <div class="pagehero">
+   <h1>One stop for Hydrology Consulting</h1> 
+   </div> </section>
+   <section id="about-page">
+ <div class="about-us">
+<h3>We are made for your consulting needs</h3>
+   </div>
+   </section>
+  <section id="services-page">
+<div class="services">
+    <h2>Our Services</h2>
+   </div>
+  </section>
+   <section id="contact-page">
+<div class="contact-us">
+    <h2>Contact us</h2>
+   </div>
+   </section>
+   
 </body>
+<footer> 
+    <p>Copyright and powered by <b>LabLuna</b> &#169</p> </footer>
 </html>
