coded page hero (yet to be mobile responsive)

--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./assets/">
+    <link rel="icon" href="./assets/Logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulting Website</title>
-    <link rel= "stylesheet" href="./style/style.css">
+    <title>Proactive Groundwater Solutions Website</title>
+    <link rel= "stylesheet" href="./style/style.css"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="hero-page">
         <div class="pagehero">
-   <h1>One stop for Hydrology Consulting</h1> 
+            <nav class="logo-nav">
+                <div class="logo"><img src="./assets/Logo.png" width="100px"/></div>
+            </nav>
+            <div class="hero-image">
+  <div class="hero-text">
+<h1>Proactive groundwater solutions for all</h1> 
+<p> As the leading people in groundwater analysis, we deliver exceptional service for all</p>
+<button class="hero-button" onclick="location.href='./#contact-page'"> Let's connect</button>  
+</div> 
+</div>
    </div> </section>
    <section id="about-page">
  <div class="about-us">
@@ -30,5 +42,5 @@
    
 </body>
 <footer> 
-    <p>Copyright and powered by <b>LabLuna</b> &#169</p> </footer>
+    <p>Copyright of Proactive Groundwater Solutions</p><p> Powered by <b>LabLuna</b> &#169</p> </footer>
 </html>
