completed about us page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section id="hero-page">
-        <div class="pagehero">
+        <div class="page-hero">
             <nav class="logo-nav">
                 <div class="logo"><img src="./assets/Logo.png" width="100px"/></div>
             </nav>
@@ -26,8 +26,17 @@
    </div> </section>
    <section id="about-page">
  <div class="about-us">
-<h3>We are made for your consulting needs</h3>
-   </div>
+    <h1> ABOUT US</h1>
+    <p> Proactive Groundwater Solutions is a dynamic team offering innovative and research-backed consulting.
+<br/>
+<br/>
+Our mission is to deliver premier groundwater research and consulting that balances client objectives with the urgent need for sustainable, socially responsible environmental solutions.
+<br/>
+<br/>
+We believe that technical excellence is only the beginning, and by integrating rigorous scientific analysis with a deep commitment to stewardship, we ensure that every project we undertake fosters a positive, lasting, and sustainable impact on the communities and ecosystems we serve.</p>
+<h3>We are made for your groundwater consulting needs!</h3>
+<hr/>   
+</div>
    </section>
   <section id="services-page">
 <div class="services">
