--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./assets/Logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proactive Groundwater Solutions Website</title>
+    <title>Proactive Groundwater Solutions</title>
+    <link rel="icon" href="./assets/Logo.png"  type="image/x-icon"/>
     <link rel= "stylesheet" href="./style/style.css"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
