made service page skeleton and inserted icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proactive Groundwater Solutions</title>
-    <link rel="icon" href="./assets/Logo.png"  type="image/x-icon"/>
+    <link rel="icon" href="./assets/PGS Logo icon 500px.png"  type="image/x-icon"/>
     <link rel= "stylesheet" href="./style/style.css"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,8 +40,11 @@ We believe that technical excellence is only the beginning, and by integrating r
    </section>
   <section id="services-page">
 <div class="services">
-    <h2>Our Services</h2>
-   </div>
+    <div class="services-maintext"> <h2>Our Services</h2></div>
+   <div class="first-service"></div>
+   <div class="second-service"></div>
+   <div class="third-service"></div>
+   <div class="fourth-service"></div>
   </section>
    <section id="contact-page">
 <div class="contact-us">
