added images to service page

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@ We believe that technical excellence is only the beginning, and by integrating r
    </section>
   <section id="services-page">
 <div class="services">
-    <div class="services-maintext"> <h2>Our Services</h2></div>
-   <div class="first-service"></div>
-   <div class="second-service"></div>
-   <div class="third-service"></div>
-   <div class="fourth-service"></div>
+    <div class="services-maintext"> <h2>SERVICES</h2></div>
+   <div class="first-service"><h1>Groundwater</h1><img src="./assets/groundwater.png"></div>
+   <div class="second-service">
+    <img src="./assets/hydrology-modelling.png"></div>
+   <div class="third-service"><img src="./assets/other-hydrology.png"></div>
+   <div class="fourth-service"><img src="./assets/Environmental regulatory.png"></div>
   </section>
    <section id="contact-page">
 <div class="contact-us">
