--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proactive Groundwater Solutions</title>
     <link rel="icon" href="./assets/PGS Logo icon 500px.png"  type="image/x-icon"/>
-    <link rel= "stylesheet" href="./style/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel= "stylesheet" href="./style/style.css"/>
 </head>
 <body>
     <section id="hero-page">
@@ -40,12 +42,72 @@ We believe that technical excellence is only the beginning, and by integrating r
    </section>
   <section id="services-page">
 <div class="services">
-    <div class="services-maintext"> <h2>SERVICES</h2></div>
-   <div class="first-service"><h1>Groundwater</h1><img src="./assets/groundwater.png"></div>
+    <div class="services-maintext"> <h1>SERVICES</h1></div>
+<div class="card mb-3">
+  <div class="row g-0">
+    <div class="col-md-4 first-service">
+      <img src="./assets/groundwater.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <div class="first-serv-text">
+        <h3 class="card-title">Groundwater Assessment</h3>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    </div>  
+    </div>
+    </div>
+  </div>
+</div>
+</div>
    <div class="second-service">
-    <img src="./assets/hydrology-modelling.png"></div>
-   <div class="third-service"><img src="./assets/other-hydrology.png"></div>
-   <div class="fourth-service"><img src="./assets/Environmental regulatory.png"></div>
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./assets/hydrology-modelling.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Hydrology Modeling</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+   <div class="third-service">
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./assets/other-hydrology.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">OTHER HYDROLOGY</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+   <div class="fourth-service">
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./assets/Environmental regulatory.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Environmental stuff</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
   </section>
    <section id="contact-page">
 <div class="contact-us">
