updated service information

--- a/index.html
+++ b/index.html
@@ -51,9 +51,23 @@ We believe that technical excellence is only the beginning, and by integrating r
     <div class="col-md-8">
       <div class="card-body">
         <div class="first-serv-text">
-        <h3 class="card-title">Groundwater Assessment</h3>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <h3 class="card-title">Groundwater Assessment and Field Investigations</h3>
+        <p class="card-text"> <small>We strive to provide on-site groundwater investigations to determine the availability, behaviour, and
+sustainability of groundwater resources. This service includes:</small></p>
+        <p class="card-text service-list">i) Hydro-census surveys <br>
+ii) Borehole siting and drilling supervision<br>
+iii) Pumping test design, execution, and interpretation<br>
+iv) Groundwater monitoring<br>
+v) Field-based data collection and reporting</p>
+        <p class="card-text"> <small>These investigations support informed decision-making for water supply development and regulatory
+compliance.</small></p>
+
+<p class="card-text"> <small>Who this is for:</small></p>
+        <p class="card-text service-list">i) Farmers and agricultural developments<br>
+ii) Property developers and estates<br>
+iii) Municipalities and water service providers<br>
+iv) Engineering and environmental consultancies<br>
+v) Industrial and commercial water users</p>
     </div>  
     </div>
     </div>
@@ -61,48 +75,94 @@ We believe that technical excellence is only the beginning, and by integrating r
 </div>
 </div>
    <div class="second-service">
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3">
   <div class="row g-0">
-    <div class="col-md-4">
+    <div class="col-md-4 second-service">
       <img src="./assets/hydrology-modelling.png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">Hydrology Modeling</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div class="second-service-text">
+        <h5 class="card-title">Hydrogeological Modelling and Data Analysis</h5>
+        <p class="card-text"><small> We develop conceptual and numerical groundwater models to understand groundwater flow systems and
+assess the impact of abstraction and climate change. This service includes:</small></p>
+ <p class="card-text service-list">i) Conceptual model development<br>
+ii) Numerical groundwater flow modelling<br>
+iii) Spatial analysis and mapping (GIS)<br>
+iv) Recharge estimation<br>
+v) Water balance assessments</p>
+        <p class="card-text"> <small>Our modelling supports long-term groundwater planning, risk assessments, and sustainable resource
+management.</small></p>
+
+<p class="card-text"> <small>Who this is for:</small></p>
+        <p class="card-text service-list">i) Environmental consultants<br>
+ii) Engineering firms<br>
+iii) Mining and infrastructure projects<br>
+iv) Water resource planners<br>
+v) Regulatory and compliance-driven projects</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 </div>
    <div class="third-service">
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="./assets/other-hydrology.png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">OTHER HYDROLOGY</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div class="third-service-text">
+        <h5 class="card-title">Hydrochemistry and Water Quality Analysis</h5>
+        <p class="card-text"> <small>We assess water quality to determine its suitability for use and to understand groundwater processes. This
+service includes:</small></p>
+<p class="card-text service-list">i) Interpretation of groundwater chemistry results<br>
+ii) Water quality classification and compliance assessments<br>
+iii)Hydrochemical diagrams and analysis<br>
+iv) Support for water use licence and environmental reporting
+        <p class="card-text"> <small>These assessments help clients evaluate risks to water quality and ensure regulatory compliance.</small></p>
+
+<p class="card-text"> <small>Who this is for:</small></p>
+        <p class="card-text service-list">i) Borehole owners and water users<br>
+ii) Agricultural and irrigation projects<br>
+iii) Industrial and commercial developments<br>
+iv) Environmental practitioners<br>
+v) Water use licence applications</p>
+      </div>
       </div>
     </div>
   </div>
 </div>
 </div>
    <div class="fourth-service">
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="./assets/Environmental regulatory.png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">Environmental stuff</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <div class="fourth-service-text">
+        <h5 class="card-title">Environmental and Regulatory Support</h5>
+        <p class="card-text">We provide professional hydrogeological input for environmental and water-use regulatory processes. This
+service includes:</p>
+        
+        <p class="card-text service-list">i) Groundwater compliance monitoring and reporting<br>
+ii) Specialist hydrogeological inputs for Environmental Impact Assessments (EIA)<br>
+iii) Risk assessments for groundwater-dependent projects<br>
+iv) Water Use Licence (WUL) technical support<br>
+v) Ongoing technical advisory services</p>
+        <p class="card-text"> <small>Our work aligns with South African regulatory requirements and industry best practice.</small></p>
+
+<p class="card-text"> <small>Who this is for:</small></p>
+        <p class="card-text service-list">i) Environmental assessment practitioners<br>
+ii) Developers and infrastructure projects<br>
+iii) Municipalities and public sector projects<br>
+iv) Consulting engineers<br>
+v) Clients requiring regulatory approval for compliance support</p>
+        </div>
       </div>
     </div>
   </div>
