added contact page and updated service page fonts and framing

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ We believe that technical excellence is only the beginning, and by integrating r
 <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4 first-service">
-      <img src="./assets/groundwater.png" class="img-fluid rounded-start" alt="...">
+      <img src="./assets/groundwater.png" class="img-fluid rounded-star" alt="two men with protective gear consulting each other to represent the groundwater assessment and field investigation service.">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <div class="first-serv-text">
+        <div class="first-serv-text text-center">
         <h3 class="card-title">Groundwater Assessment and Field Investigations</h3>
         <p class="card-text"> <small>We strive to provide on-site groundwater investigations to determine the availability, behaviour, and
 sustainability of groundwater resources. This service includes:</small></p>
@@ -62,7 +62,7 @@ v) Field-based data collection and reporting</p>
         <p class="card-text"> <small>These investigations support informed decision-making for water supply development and regulatory
 compliance.</small></p>
 
-<p class="card-text"> <small>Who this is for:</small></p>
+<p class="text-center"> <small>Who this is for:</small></p>
         <p class="card-text service-list">i) Farmers and agricultural developments<br>
 ii) Property developers and estates<br>
 iii) Municipalities and water service providers<br>
@@ -78,12 +78,12 @@ v) Industrial and commercial water users</p>
     <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4 second-service">
-      <img src="./assets/hydrology-modelling.png" class="img-fluid rounded-start" alt="...">
+      <img src="./assets/hydrology-modelling.png" class="img-fluid rounded-start" alt="a well with groundwater contraption to represent the hydrogeological modelling and data analysis service">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <div class="second-service-text">
-        <h5 class="card-title">Hydrogeological Modelling and Data Analysis</h5>
+        <div class="second-service-text text-center">
+        <h3 class="card-title">Hydrogeological Modelling and Data Analysis</h3>
         <p class="card-text"><small> We develop conceptual and numerical groundwater models to understand groundwater flow systems and
 assess the impact of abstraction and climate change. This service includes:</small></p>
  <p class="card-text service-list">i) Conceptual model development<br>
@@ -110,12 +110,12 @@ v) Regulatory and compliance-driven projects</p>
     <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="./assets/other-hydrology.png" class="img-fluid rounded-start" alt="...">
+      <img src="./assets/other-hydrology.png" class="img-fluid rounded-start" alt="a tap that is splashing water to represent the hydrochemistry and water quality analysis service">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <div class="third-service-text">
-        <h5 class="card-title">Hydrochemistry and Water Quality Analysis</h5>
+        <div class="third-service-text text-center">
+        <h3 class="card-title">Hydrochemistry and Water Quality Analysis</h3>
         <p class="card-text"> <small>We assess water quality to determine its suitability for use and to understand groundwater processes. This
 service includes:</small></p>
 <p class="card-text service-list">i) Interpretation of groundwater chemistry results<br>
@@ -140,14 +140,15 @@ v) Water use licence applications</p>
     <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="./assets/Environmental regulatory.png" class="img-fluid rounded-start" alt="...">
+      <img src="./assets/Environmental regulatory.png" class="img-fluid rounded-start" alt="hands that are holding soil and a budding plant bulb to represent the environmental and regulatory support service.">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <div class="fourth-service-text">
-        <h5 class="card-title">Environmental and Regulatory Support</h5>
-        <p class="card-text">We provide professional hydrogeological input for environmental and water-use regulatory processes. This
-service includes:</p>
+        <div class="fourth-service-text text-center">
+        <h3 class="card-title">Environmental and Regulatory Support</h3>
+        
+        <p class="card-text"><small>We provide professional hydrogeological input for environmental and water-use regulatory processes. This
+service includes:</small></p>
         
         <p class="card-text service-list">i) Groundwater compliance monitoring and reporting<br>
 ii) Specialist hydrogeological inputs for Environmental Impact Assessments (EIA)<br>
@@ -170,12 +171,17 @@ v) Clients requiring regulatory approval for compliance support</p>
 </div>
   </section>
    <section id="contact-page">
-<div class="contact-us">
-    <h2>Contact us</h2>
-   </div>
+<div class="contact-us text-center">
+    <h1>Connect with us</h1>
+    <p>Ready to align with customer centered groundwater solution or find the right talent for your organization? Send us a message and our consultants will get in touch with you.</p>
+  <iframe data-tally-src="https://tally.so/embed/Xx40pP?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="542" frameborder="0" marginheight="0" marginwidth="0" title="PGS place holder"></iframe>
+<h5> Want to contact us directly?</h5>
+  <p>Ready to align with customer centered groundwater solution or find the right talent for your organization? Send us a message and our consultants will get in touch with you.</p>
    </section>
    
 </body>
+<script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+  </div>
 <footer> 
     <p>Copyright of Proactive Groundwater Solutions</p><p> Powered by <b>LabLuna</b> &#169</p> </footer>
 </html>
