updated Tally contact form

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ v) Clients requiring regulatory approval for compliance support</p>
 <div class="contact-us text-center">
     <h1>Connect with us</h1>
     <p>Ready to align with customer centered groundwater solution or find the right talent for your organization? Send us a message and our consultants will get in touch with you.</p>
-  <iframe data-tally-src="https://tally.so/embed/Xx40pP?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="542" frameborder="0" marginheight="0" marginwidth="0" title="PGS place holder"></iframe>
-<h5> Want to contact us directly?</h5>
-  <p>Ready to align with customer centered groundwater solution or find the right talent for your organization? Send us a message and our consultants will get in touch with you.</p>
+  <iframe data-tally-src="https://tally.so/embed/rjoAl5?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0" title="PGS Form Data"></iframe>
+  <h5> Want to contact us directly?</h5>
+  <img>
    </section>
    
 </body>
